Images are now hosted on a minio database running on a docker container. Added a separate get request for the image file.
